@@ -12,9 +12,9 @@ import java.util.stream.Collectors;
 @Service
 public class QuizServiceImpl implements QuizService {
 
-    private QuizRepository quizRepository;
+    private final QuizRepository quizRepository;
 
-    private QuestionClient questionClient;
+    private final QuestionClient questionClient;
 
     public QuizServiceImpl(QuizRepository quizRepository, QuestionClient questionClient) {
         this.quizRepository = quizRepository;
@@ -30,19 +30,17 @@ public class QuizServiceImpl implements QuizService {
     public List<Quiz> get() {
         List<Quiz> quizzes = quizRepository.findAll();
 
-        List<Quiz> newQuizList = quizzes.stream().map(quiz -> {
-            quiz.setQuestions(questionClient.getQuestionOfQuiz(quiz.getId()));
+        return quizzes.stream().map(quiz -> {
+            quiz.setQuestions(questionClient.getQuestionsOfQuiz(quiz.getId()));
             return quiz;
-        }).collect(Collectors.toList());
-
-        return newQuizList;
+        }).toList();
     }
 
     @Override
     public Quiz get(Long id) {
 
         Quiz quiz = quizRepository.findById(id).orElseThrow(() -> new RuntimeException("Quiz not found"));
-        quiz.setQuestions(questionClient.getQuestionOfQuiz(quiz.getId()));
+        quiz.setQuestions(questionClient.getQuestionsOfQuiz(quiz.getId()));
         return quiz;
     }
 }
